--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-.terraform/
+# Local .terraform directories
+**/.terraform/*
+
+# State files
 *.tfstate
-*.tfstate.backup
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Sensitive files
+*.tfvars
+*.tfvars.json
+
+# Override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Terraform plan files
+*.plan
